@@ -38,6 +38,12 @@ class ActsAsTaggableOnSteroidsTest < Test::Unit::TestCase
     assert_equal Hash.new, Post.find_options_for_tagged_with([nil])
   end
   
+  def test_find_options_for_tagged_with_leavs_arguments_unchanged
+    original_tags = photos(:jonathan_questioning_dog).tags.dup
+    Photo.find_options_for_tagged_with(photos(:jonathan_questioning_dog).tags)
+    assert_equal original_tags, photos(:jonathan_questioning_dog).tags
+  end
+  
   def test_include_tags_on_find_tagged_with
     assert_nothing_raised do
       Photo.find_tagged_with('Nature', :include => :tags)
