@@ -1,3 +1,7 @@
+[8 July 2007]
+
+* find_options_for_tagged_with should not alter its arguments
+
 [1 July 2007]
 
 * Fix incorrect tagging when the case of the tag list is changed.
